--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.dashx_flutter_example">
+    package="com.dashx.demo_example">
    <application
         android:label="dashx_flutter_example"
         android:name="${applicationName}"
