--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  graphql: ^5.1.1
+  path_provider: ^2.0.10
+  http: ^0.13.4
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
