--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   graphql: ^5.1.1
+  http: ^0.13.4
   plugin_platform_interface: ^2.0.2
   shared_preferences: ^2.0.15
   uuid: ^3.0.6
