--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,23 +2,17 @@ group 'com.example.dashx_flutter'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.6.10'
-    repositories {
-        google()
-        mavenCentral()
-    }
+    ext.kotlin_version = '1.7.10'
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
-rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+    }
+
+    dependencies {
+        classpath "com.android.tools.build:gradle:7.1.3"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -47,6 +41,6 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.github.dashxhq:dashx-android:main-SNAPSHOT'
+    implementation 'com.dashx:dashx-android:1.0.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
 }
