update in minSdk version feom 16 to 21

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -36,7 +36,9 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
+        targetSdkVersion 32
+        compileSdkVersion 31
     }
 }
 
